welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
  if(getMondeHauteur()*getMondeLargeur()=compteur+1)
                      ^ColumnByColumn:18: error: not found: value getHauteur
  if(getY()==getHauteur()-1)
             ^